chore: docker support, Makefile and README

--- a/api/.env.dev
+++ b/api/.env.dev
@@ -1,5 +1,6 @@
 MIX_ENV=dev
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_HOST=localhost
-DB_PORT=2345
+DB_NAME=bell_fs_dev
+DB_HOST=bell_fs_db
+DB_PORT=5432
